--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <input (keyup)="changeImage($event)" [value]="imgurl" />
 
-<app-post [img]="imgurl" (imgSelected)="logImg($event)"></app-post>
+<app-post [img]="imgurl" (imgSelected)="logImg($event)">
+    <P>some caption</P>
+</app-post>
 
 <p>Hello {{ name.toUpperCase() }}</p>
 <p>Hello {{ getName() }}</p>
